--- a/index.html
+++ b/index.html
@@ -1,25 +1,94 @@
 <!DOCTYPE html>
-            <html lang="en">
+<html lang="en">
 
-            <head>
-                <meta charset="UTF-8">
-                <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <title>Home page</title>
-                <link rel="stylesheet" href="./public/css/app.css">
-            </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Restau</title>
+    <link rel="stylesheet" href="./public/css/app.css">
+</head>
 
-            <body>
-                <header>
-                
-                </header>
-                <main>
-                    
-                </main>
-                <footer>
+<body>
+    <header>
 
-                </footer>
+    </header>
 
-                <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-            </body>
 
-            </html>
+    <main>
+
+
+
+        <!--! about -->
+        <section id="about">
+            <div class="container">
+                <h1>Voluptatem dignissimos provident</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua.</p>
+                <ul>
+                    <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-check2-all" viewBox="0 0 16 16">
+                            <path
+                                d="M12.354 4.354a.5.5 0 0 0-.708-.708L5 10.293 1.854 7.146a.5.5 0 1 0-.708.708l3.5 3.5a.5.5 0 0 0 .708 0zm-4.208 7-.896-.897.707-.707.543.543 6.646-6.647a.5.5 0 0 1 .708.708l-7 7a.5.5 0 0 1-.708 0" />
+                            <path d="m5.354 7.146.896.897-.707.707-.897-.896a.5.5 0 1 1 .708-.708" />
+                        </svg>
+                        </svg> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                    <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-check2-all" viewBox="0 0 16 16">
+                            <path
+                                d="M12.354 4.354a.5.5 0 0 0-.708-.708L5 10.293 1.854 7.146a.5.5 0 1 0-.708.708l3.5 3.5a.5.5 0 0 0 .708 0zm-4.208 7-.896-.897.707-.707.543.543 6.646-6.647a.5.5 0 0 1 .708.708l-7 7a.5.5 0 0 1-.708 0" />
+                            <path d="m5.354 7.146.896.897-.707.707-.897-.896a.5.5 0 1 1 .708-.708" />
+                        </svg>Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+                    <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-check2-all" viewBox="0 0 16 16">
+                            <path
+                                d="M12.354 4.354a.5.5 0 0 0-.708-.708L5 10.293 1.854 7.146a.5.5 0 1 0-.708.708l3.5 3.5a.5.5 0 0 0 .708 0zm-4.208 7-.896-.897.707-.707.543.543 6.646-6.647a.5.5 0 0 1 .708.708l-7 7a.5.5 0 0 1-.708 0" />
+                            <path d="m5.354 7.146.896.897-.707.707-.897-.896a.5.5 0 1 1 .708-.708" />
+                        </svg>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                        reprehenderit in
+                        voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+
+                </ul>
+                <p>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident</p>
+            </div>
+            <div class="image ">
+                <img width="600px" height="400px" src="./public/images/about.jpg" alt="">
+            </div>
+        </section>
+        <div class="whyus">
+            <div class="title">
+                <p>WHY US <span>————————</span></p>
+                <h1>Why Choose Our Restaurant</h1>
+
+            </div>
+            <div class="flex">
+                <div class="chooses">
+                    <h1>01</h1>
+                    <p>Lorem, ipsum.</p>
+                    <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti esse excepturi facilis
+                        soluta modi?</span>
+                </div>
+                <div class="chooses">
+                    <h1>02</h1>
+                    <p>Lorem, ipsum.</p>
+                    <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti esse excepturi facilis
+                        soluta modi?</span>
+
+                </div>
+                <div class="chooses">
+                    <h1>03</h1>
+                    <p>Lorem, ipsum.</p>
+                    <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti esse excepturi facilis
+                        soluta modi?</span>
+
+                </div>
+            </div>
+        </div>
+
+    <script src="./public/js/app.js"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+</body>
+
+</html>
