--- a/index.html
+++ b/index.html
@@ -86,6 +86,137 @@
                 </div>
             </div>
         </div>
+        <!--~ menu -->
+        <section class="menu">
+            <div class="titre">
+                <p>MENU<span>———————————</span></p>
+                <h1>Check Our Tasty Menu </h1>
+            </div>
+
+            <div class="links">
+                <button id="all-tabs">All</button>
+                <button id="starters">Starters</button>
+                <button id="salades">Salades</button>
+                <button id="specialty">Specialty</button>
+            </div>
+
+            <div class="MENU">
+                <div class="starters-plat plats">
+                    <img src="./public/images/lobster-bisque.jpg" alt="">
+
+                    <div>
+                        <div class="info">
+                            <h4>Lobster Bisque</h4>
+                            <span>$5.95</span>
+                        </div>
+                        <p>
+                            Lorem, deren, trataro, filede, nerada
+                        </p>
+                    </div>
+                </div>
+
+                <div class="starters-plat plats">
+                    <img src="./public/images/cake.jpg" alt="">
+
+                    <div>
+                        <div class="info">
+                            <h4>Cake</h4>
+                            <span>$5.95</span>
+                        </div>
+                        <p>
+                            Lorem, deren, trataro, filede, nerada
+                        </p>
+                    </div>
+                </div>
+
+                <div class="salades plats">
+                    <img src="./public/images/tuscan-grilled.jpg" alt="">
+
+                    <div>
+                        <div class="info">
+                            <h4>Tuscan - grilled</h4>
+                            <span>$5.95</span>
+                        </div>
+                        <p>
+                            Lorem, deren, trataro, filede, nerada
+                        </p>
+                    </div>
+                </div>
+
+                <div class="salades plats">
+                    <img src="./public/images/mozzarella.jpg" alt="">
+
+                    <div>
+                        <div class="info">
+                            <h4>mozzarella</h4>
+                            <span>$5.95</span>
+                        </div>
+                        <p>
+                            Lorem, deren, trataro, filede, nerada
+                        </p>
+                    </div>
+                </div>
+
+                <div class="salades plats">
+                    <img src="./public/images/greek-salad.jpg" alt="">
+
+                    <div>
+                        <div class="info">
+                            <h4>Greek-Salad</h4>
+                            <span>$5.95</span>
+                        </div>
+                        <p>
+                            Lorem, deren, trataro, filede, nerada
+                        </p>
+                    </div>
+                </div>
+
+                <div class="salades plats">
+                    <img src="./public/images/lobster-roll.jpg" alt="">
+
+                    <div>
+                        <div class="info">
+                            <h4>Lobster Roll</h4>
+                            <span>$5.95</span>
+                        </div>
+                        <p>
+                            Lorem, deren, trataro, filede, nerada
+                        </p>
+                    </div>
+                </div>
+
+                <div class="specialty plats">
+                    <img src="./public/images/bread-barrel.jpg" alt="">
+
+                    <div>
+                        <div class="info">
+                            <h4>Bread Barrel</h4>
+                            <span>$5.95</span>
+                        </div>
+                        <p>
+                            Lorem, deren, trataro, filede, nerada
+                        </p>
+                    </div>
+                </div>
+
+                <div class="specialty plats">
+                    <img src="./public/images/caesar.jpg" alt="">
+
+                    <div>
+                        <div class="info">
+                            <h4>caesar</h4>
+                            <span>$5.95</span>
+                        </div>
+                        <p>
+                            Lorem, deren, trataro, filede, nerada
+                        </p>
+                    </div>
+                </div>
+
+
+            </div>
+
+        </section>
 
     <script src="./public/js/app.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
