--- a/index.html
+++ b/index.html
@@ -217,6 +217,85 @@
             </div>
 
         </section>
+        <!--! Specials -->
+
+
+        <section id="specials">
+            <div class="title">
+                <p>specials <span>—————————</span></p>
+                <h2>check our specials</h2>
+            </div>
+
+            <div class="flex">
+                <div class="list">
+                    <a href="#" id="modi">modi sit est</a>
+                    <a href="#" id="praesentium">unde praesentium sed</a>
+                    <a href="#" id="pariatur">pariatur explicabo vel</a>
+                    <a href="#" id="nostrum">nostrum qui quasi</a>
+                    <a href="#" id="lusti">lusti ut expedita aut</a>
+                </div>
+
+                <div class="chooses">
+                    <div id="first">
+                        <div>
+                            <h3>Architecto ut aperiam autem id</h3>
+                            <p>Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata raqer a videna
+                                mareta paulona marka</p>
+
+                            <p>Et nobis maiores eius. Voluptatibus ut enim blanditiis atque harum sint...</p>
+                        </div>
+                        <div>
+                            <img src="./public/images/specials-1.png" alt="">
+                        </div>
+                    </div>
+
+                    <div id="second" class="none">
+                        <div>
+                            <h3>Et blanditiis nemo veritatis excepturi</h3>
+                            <p>Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata...</p>
+
+                            <p>Ea ipsum voluptatem consequatur quis est. Illum error ullam omnis quia...</p>
+                        </div>
+                        <div>
+                            <img src="./public/images/specials-2.png" alt="">
+                        </div>
+                    </div>
+
+                    <div id="third" class="none">
+                        <div>
+                            <h3>Impedit facilis occaecati odio neque aperiam sit</h3>
+                            <p>Eos voluptatibus quo. Odio similique illum id quidem non enim fuga...</p>
+                            <p>Iure officiis odit rerum. Harum sequi eum illum corrupti culpa...</p>
+                        </div>
+                        <div>
+                            <img src="./public/images/specials-3.png" alt="">
+                        </div>
+                    </div>
+
+                    <div id="fourth" class="none">
+                        <div>
+                            <h3>Fuga dolores inventore laboriosam ut est</h3>
+                            <p>Totam aperiam accusamus. Repellat consequuntur iure voluptas...</p>
+                            <p>Eaque consequuntur consequuntur libero expedita in voluptas...</p>
+                        </div>
+                        <div>
+                            <img src="./public/images/specials-4.png" alt="">
+                        </div>
+                    </div>
+
+                    <div id="fifth" class="none">
+                        <div>
+                            <h3>Est eveniet ipsam sindera pad rone matrelat sando reda</h3>
+                            <p>Omnis blanditiis saepe eos autem qui sunt debitis porro quia.</p>
+                            <p>Exercitationem nostrum omnis. Ut reiciendis repudiandae minus...</p>
+                        </div>
+                        <div>
+                            <img src="./public/images/specials-5.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     <script src="./public/js/app.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
