--- a/index.html
+++ b/index.html
@@ -517,8 +517,82 @@
             </div>
         </form>
     </section>
+<!--* testimonials -->
+<section class="testimonials" >
+    <h4>testimonails</h4>
+    <h1>what they say about us</h1>
+    <div id="caro2">   
+       <div class="testimonial-card">
+    <div class="quote-box">
+      <span class="quote-mark start">“</span>
+      <p>
+        Export temporsse labore quem cillum quid malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+      </p>
+      <span class="quote-mark end">”</span>
+    </div>
+    <div class="profile">
+      <img src="./public/images/testimonials-1.jpg" alt="Sara Wilsson" />
+      <div class="profile-info">
+        <h3>Sara Wilsson</h3>
+        <p>Designer</p>
+      </div>
+    </div>
+  </div>
+   <div class="testimonial-card">
+    <div class="quote-box">
+      <span class="quote-mark start">“</span>
+      <p>
+        Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid ma noster fugiat irure amet legam anim culpa.
+      </p>
+      <span class="quote-mark end">”</span>
+    </div>
+    <div class="profile">
+      <img src="./public/images/testimonials-2.jpg" alt="Sara Wilsson" />
+      <div class="profile-info">
+        <h3>Sara Wilsson</h3>
+        <p>Designer</p>
+      </div>
+    </div>
+  </div>
+   <div class="testimonial-card">
+    <div class="quote-box">
+      <span class="quote-mark start">“</span>
+      <p>
+        Export tempor illum tamen malis malis eram quae irure esse labore quema noster fugiat irure amet legam anim culpa.
+      </p>
+      <span class="quote-mark end">”</span>
+    </div>
+    <div class="profile">
+      <img src="./public/images/testimonials-3.jpg" alt="Sara Wilsson" />
+      <div class="profile-info">
+        <h3>Sara Wilsson</h3>
+        <p>Designer</p>
+      </div>
+    </div>
+  </div>
+   <div class="testimonial-card">
+    <div class="quote-box">
+      <span class="quote-mark start">“</span>
+      <p>
+        Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid malis quorum velit fore era;elf[ejko fewfh ih pehq gg ]
+      </p>
+      <span class="quote-mark end">”</span>
+    </div>
+    <div class="profile">
+      <img src="./public/images/testimonials-4.jpg" alt="Sara Wilsson" />
+      <div class="profile-info">
+        <h3>Sara Wilsson</h3>
+        <p>Designer</p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="carousel-controls d-none">
+<button id="prevBtn" class="d-none">Prev</button>
+<button id="nextBtn" class="d-none">Next</button>
+</div>
 
-
+  </section>
 
     <!--^ gallery -->
 
