--- a/index.html
+++ b/index.html
@@ -75,8 +75,19 @@
         </div>
         <button class="playBtn bg-alpha border-0">
             <i class="bi bi-play-circle text-white"></i>
+            <a href="#" id="vd">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-play-fill" viewBox="0 0 16 16">
+                    <path d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393" />
+                </svg>
+            </a>
+            
+            <div class="modal" id="ffllex">
+                <span id="i4la9e">X</span>
+                <iframe width="960" height="540" src="https://www.youtube.com/embed/Y7f98aduVJ8" title="BootstrapMade Template Builder Overview" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
         </button>
     </div>
+    
 </header>
 <main>
 
